--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -21,6 +21,9 @@
     .search {
       border-color: gray;
     }
+    .logout {
+      background-color: black;
+    }
   }
 
   .sidebar {
@@ -63,7 +66,7 @@
     }
   }
 
-  input{
-      background-color: transparent;
+  input {
+    background-color: transparent;
   }
 }
