--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -43,12 +43,14 @@
         padding: 5px;
         border-radius: 5px;
         cursor: pointer;
+        background-color: #3a405a;
       }
       .item {
         display: flex;
         align-items: center;
         margin-right: 20px;
         position: relative;
+        color: #cfccd6;
         .icon {
           font-size: 20px;
           cursor: pointer;
