--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -2,10 +2,9 @@
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
-  background-color: white;
 
   .top {
-    height: 50px;
+    height: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,7 +32,7 @@
       .title {
         font-size: 10px;
         font-weight: bold;
-        color: #999;
+        color: #cfccd6;
         margin-top: 15px;
         margin-bottom: 5px;
       }
@@ -45,7 +44,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #ece8ff;
+          background-color: #55868c;
         }
 
         .icon {
@@ -56,7 +55,7 @@
         span {
           font-size: 13px;
           font-weight: 600;
-          color: #888;
+          color: #cfccd6;
           margin-left: 10px;
         }
       }
@@ -77,13 +76,10 @@
       margin: 5px;
 
       &:nth-child(1) {
-        background-color: whitesmoke;
+        background-color: #3a405a;
       }
       &:nth-child(2) {
         background-color: #333;
-      }
-      &:nth-child(3) {
-        background-color: darkblue;
       }
     }
   }
