--- a/src/pages/newImage/newimage.scss
+++ b/src/pages/newImage/newimage.scss
@@ -41,7 +41,7 @@
               display: flex;
               align-items: center;
               gap: 10px;
-
+              color: #cfccd6;
               .icon {
                 cursor: pointer;
               }
