--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -32,7 +32,7 @@
 
     .top {
       .logo {
-        color: #999;
+        color: #cfccd6;
       }
     }
     hr {
@@ -60,8 +60,8 @@
       .viewButton,
       .deleteButton,
       .cellWithStatus {
-        color: gray;
-        border: none;
+        color: #cfccd6;
+        border: 1px dotted #d90429;
       }
     }
   }
