--- a/src/dark.scss
+++ b/src/dark.scss
@@ -69,4 +69,13 @@
   input {
     background-color: transparent;
   }
+  .textareaDescription {
+    background-color: black;
+  }
+  .descriptionButton {
+    background-color: black;
+  }
+  .InputAuto {
+    background-color: black;
+  }
 }
