--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,10 +1,10 @@
-.navbar {
-  height: 50px;
+.navbar2 {
+  height: 65px;
   border-bottom: 0.5px solid rgb(231, 228, 228);
   display: flex;
   align-items: center;
   font-size: 14px;
-  color: #555;
+  color: #cfccd6;
 
   .wrapper {
     width: 100%;
