--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,13 +1,15 @@
-.sidebar {
+.sidebar2 {
   flex: 1;
-  border-right: 0.5px solid rgb(230, 227, 227);
+  border-right: 0.5px solid #cfccd6;
   min-height: 100vh;
 
   .top {
-    height: 48px;
+    height: 62px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 3px;
+    border-bottom: 0.5px solid #cfccd6;
 
     .logo {
       font-size: 20px;
@@ -15,12 +17,6 @@
       color: #ff9505;
     }
   }
-
-  hr {
-    height: 0;
-    border: 0.5px solid rgb(230, 227, 227);
-  }
-
   .center {
     padding-left: 10px;
 
@@ -39,7 +35,6 @@
 
       li {
         display: flex;
-        align-items: center;
         padding: 5px;
         cursor: pointer;
 
