--- a/src/pages/new2D/new2D.scss
+++ b/src/pages/new2D/new2D.scss
@@ -13,9 +13,10 @@
       margin: 20px;
       display: flex;
       gap: 50px;
-      h1 {
+      .h1 {
         color: lightgray;
         font-size: 20px;
+        margin-bottom: 0;
       }
 
       .left {
@@ -44,6 +45,8 @@
               color: #cfccd6;
               .icon {
                 cursor: pointer;
+                width: 1.5em;
+                height: 1.5em;
               }
             }
 
