--- a/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
+++ b/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
@@ -20,6 +20,10 @@ canvas {
   font-size: 20px;
   margin-right: 30px;
 }
+.text3dloading {
+  font-size: 30px;
+  margin-right: 30px;
+}
 .mainName3D {
   width: calc(100% - 300px);
   left: 300px;
@@ -29,6 +33,7 @@ canvas {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 30px;
+  color: #ff9505;
 }
 
 @media screen and (max-width: 1400px) {
