--- a/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
+++ b/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
@@ -7,8 +7,8 @@
 }
 canvas {
   border-radius: 10px;
-  width: 750px !important;
-  height: 750px !important;
+  width: 700px !important;
+  height: 700px !important;
 }
 .flexCanvasAndText {
   display: flex;
@@ -19,6 +19,8 @@ canvas {
 .text3drender {
   font-size: 20px;
   margin-right: 30px;
+  max-height: 700px;
+  overflow-y: scroll;
 }
 .text3dloading {
   font-size: 30px;
@@ -36,10 +38,35 @@ canvas {
   color: #ff9505;
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1300px) {
   canvas {
-    width: 550px !important;
-    height: 550px !important;
+    width: 600px !important;
+    height: 600px !important;
+  }
+  .responsiveTest {
+    display: flex;
+    width: 600px !important;
+    height: 600px !important;
+  }
+  .text3drender {
+    max-height: 600px;
+  }
+}
+@media screen and (max-width: 1150px) {
+  canvas {
+    width: 450px !important;
+    height: 450px !important;
+  }
+  .responsiveTest {
+    display: flex;
+    width: 450px !important;
+    height: 450px !important;
+  }
+  .text3drender {
+    max-height: 450px;
+  }
+  .flexCanvasAndText {
+    gap: 20px;
   }
 }
 
@@ -51,8 +78,13 @@ canvas {
     display: contents;
   }
   canvas {
-    width: 750px !important;
-    height: 750px !important;
+    width: 550px !important;
+    height: 550px !important;
+  }
+  .responsiveTest {
+    display: flex;
+    width: 550px !important;
+    height: 550px !important;
   }
   .mainName3D {
     width: 100%;
@@ -62,9 +94,38 @@ canvas {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
   }
   .text3drender {
     font-size: 25px;
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  canvas {
+    width: 400px !important;
+    height: 400px !important;
+  }
+  .responsiveTest {
+    display: flex;
+    width: 400px !important;
+    height: 400px !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  canvas {
+    width: 300px !important;
+    height: 300px !important;
+  }
+  .responsiveTest {
+    display: flex;
+    width: 300px !important;
+    height: 300px !important;
+  }
+  .text3drender {
+    overflow-y: scroll;
+    max-height: 40vh;
     margin-right: 2rem;
     margin-left: 2rem;
   }
