--- a/src/dark.scss
+++ b/src/dark.scss
@@ -78,4 +78,7 @@
   .InputAuto {
     background-color: black;
   }
+  .css-imf0nl-MuiDataGrid-root {
+    border: 1px solid white !important;
+  }
 }
