--- a/src/components/datatable3D/datatable3D.scss
+++ b/src/components/datatable3D/datatable3D.scss
@@ -28,6 +28,14 @@
     align-items: center;
     gap: 15px;
   }
+  .css-levciy-MuiTablePagination-displayedRows {
+    color: #cfccd6 !important;
+    margin-bottom: 0;
+  }
+
+  .css-zylse7-MuiButtonBase-root-MuiIconButton-root {
+    color: #cfccd6 !important;
+  }
 
   .cellWithStatus {
     padding: 5px;
