--- a/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
+++ b/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
@@ -22,6 +22,9 @@ canvas {
   max-height: 700px;
   overflow-y: scroll;
 }
+.text3drender::-webkit-scrollbar {
+  display: none;
+}
 .text3dloading {
   font-size: 30px;
   margin-right: 30px;
