--- a/src/pages/videoEditing/videoEditing.scss
+++ b/src/pages/videoEditing/videoEditing.scss
@@ -1,6 +1,60 @@
 .videoContainer {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
   left: 300px;
   width: calc(100% - 300px);
+}
+.TitleVideoEditting {
+  font-size: 35px;
+  color: #cfccd6;
+  width: 100%;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.flexVideos {
+  display: flex;
+  justify-content: center;
+  flex: 1 1 300px;
+  flex-wrap: wrap;
+  gap: 80px;
+}
+.videotitle {
+  color: #cfccd6;
+  font-size: 25px;
+}
+@media screen and (max-width: 1000px) {
+  .videoContainer {
+    left: 0px;
+    width: 100%;
+  }
+  .flexVideos {
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .setWidthVideo {
+    width: 80vw !important;
+    height: 40vh !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  .TitleVideoEditting {
+    margin-top: 0rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .setWidthVideo {
+    width: 80vw !important;
+    height: 30vh !important;
+  }
+}
+@media screen and (max-width: 350px) {
+  .setWidthVideo {
+    width: 80vw !important;
+    height: 25vh !important;
+  }
 }
