--- a/src/components/datatable3D/datatable3D.scss
+++ b/src/components/datatable3D/datatable3D.scss
@@ -32,6 +32,9 @@
     color: #cfccd6 !important;
     margin-bottom: 0;
   }
+  .css-1kwdphh-MuiDataGrid-virtualScrollerContent {
+    background-color: #3a405a;
+  }
 
   .css-zylse7-MuiButtonBase-root-MuiIconButton-root {
     color: #cfccd6 !important;
