--- a/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
+++ b/src/pages/ThreeDArtDetails/ThreeDArtDetails.scss
@@ -5,11 +5,6 @@
   left: 300px;
   width: calc(100% - 300px);
 }
-canvas {
-  border-radius: 10px;
-  width: 700px !important;
-  height: 700px !important;
-}
 .flexCanvasAndText {
   display: flex;
   gap: 30px;
@@ -19,15 +14,12 @@ canvas {
 .text3drender {
   font-size: 20px;
   margin-right: 30px;
-  max-height: 700px;
+  max-height: 80vh;
   overflow-y: scroll;
+  width: calc(30% - 30px) !important;
 }
 .text3drender::-webkit-scrollbar {
   display: none;
-}
-.text3dloading {
-  font-size: 30px;
-  margin-right: 30px;
 }
 .mainName3D {
   width: calc(100% - 300px);
@@ -40,37 +32,13 @@ canvas {
   margin-bottom: 30px;
   color: #ff9505;
 }
-
-@media screen and (max-width: 1300px) {
-  canvas {
-    width: 600px !important;
-    height: 600px !important;
-  }
-  .responsiveTest {
-    display: flex;
-    width: 600px !important;
-    height: 600px !important;
-  }
-  .text3drender {
-    max-height: 600px;
-  }
+#modelHolder {
+  width: calc(70% - 30px) !important;
+  max-height: 80vh !important;
 }
-@media screen and (max-width: 1150px) {
-  canvas {
-    width: 450px !important;
-    height: 450px !important;
-  }
-  .responsiveTest {
-    display: flex;
-    width: 450px !important;
-    height: 450px !important;
-  }
-  .text3drender {
-    max-height: 450px;
-  }
-  .flexCanvasAndText {
-    gap: 20px;
-  }
+canvas {
+  width: 100% !important;
+  max-height: 80vh !important;
 }
 
 @media screen and (max-width: 1000px) {
@@ -79,15 +47,6 @@ canvas {
     width: 100%;
     margin-top: 20px;
     display: contents;
-  }
-  canvas {
-    width: 550px !important;
-    height: 550px !important;
-  }
-  .responsiveTest {
-    display: flex;
-    width: 550px !important;
-    height: 550px !important;
   }
   .mainName3D {
     width: 100%;
@@ -103,33 +62,34 @@ canvas {
     font-size: 25px;
     margin-right: 2rem;
     margin-left: 2rem;
+    width: calc(100% - 4rem) !important;
+    max-height: 70vh !important;
+  }
+  #modelHolder {
+    margin-left: 2rem !important;
+    margin-right: 2rem !important;
+    width: calc(100% - 4rem) !important;
+    max-height: 70vh !important;
+  }
+  canvas {
+    width: 100% !important;
+    max-height: 70vh !important;
   }
 }
+
 @media screen and (max-width: 700px) {
+  #modelHolder {
+    max-height: 60vh !important;
+    margin-left: 0rem !important;
+    margin-right: 0rem !important;
+    width: calc(100%) !important;
+  }
   canvas {
-    width: 400px !important;
-    height: 400px !important;
-  }
-  .responsiveTest {
-    display: flex;
-    width: 400px !important;
-    height: 400px !important;
-  }
-}
-@media screen and (max-width: 500px) {
-  canvas {
-    width: 300px !important;
-    height: 300px !important;
-  }
-  .responsiveTest {
-    display: flex;
-    width: 300px !important;
-    height: 300px !important;
+    max-height: 60vh !important;
   }
   .text3drender {
-    overflow-y: scroll;
-    max-height: 40vh;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+    width: calc(100% - 2rem) !important;
   }
 }
