--- a/src/pages/videoEditing/videoEditing.scss
+++ b/src/pages/videoEditing/videoEditing.scss
@@ -25,6 +25,7 @@
 .videotitle {
   color: #cfccd6;
   font-size: 25px;
+  max-width: 80vw;
 }
 @media screen and (max-width: 1000px) {
   .videoContainer {
